--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.0.0",
+    "auto-bind": "^5.0.1",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "nanoid": "^3.3.4",
