--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "open music api v1.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "lint": "eslint ./src",
+    "start-prod": "node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
+    "lint": "npx eslint ./src",
     "migrate": "node-pg-migrate"
   },
   "repository": {
@@ -22,7 +23,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.0.0",
-    "auto-bind": "^5.0.1",
+    "auto-bind": "^4.0.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "nanoid": "^3.3.4",
